--- a/style.css
+++ b/style.css
@@ -16,11 +16,14 @@ html body{
 }
 .nevbar{
     height: 70px;
+    width: 100%;
     background-color:rgba(7, 7, 32, 0.893);
     box-shadow: 0px 4px 5px rgba(7, 7, 32, 0.893);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
+    z-index: 1;
 }
 .rightnev span{
 cursor: pointer;
@@ -111,26 +114,28 @@ font-weight: 600;
 
 .food-field{
     width: 95%;
-    margin-top: 20px;
+    margin-top: 80px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
+
 }
 img{
-    width: 270px;
+    width: 240px;
     height: 170px;
     object-fit: cover; 
     border-radius: 5px;
     margin-top: 15px;
     margin-left: 5px;
     margin-right: 5px;
-
     cursor: pointer;
+    transition: 0.2s;
 }
 
 img:hover{
     transform: scale(0.95);
+    transition-timing-function:linear;
     border-radius: 15px;
     
 }
@@ -139,10 +144,15 @@ img:hover{
     /* width: 270px; */
     display: flex;
     flex-direction: column;
-    background-color: azure;
     border-radius: 15px;
     margin: 10px;
-    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.283);
+
+    /*  */
+    background: rgba(50, 111, 158, 0.2);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(50, 111, 158, 0.3);
 }
 .food-buttom{
     display: flex;
