--- a/image.css
+++ b/image.css
@@ -16,19 +16,22 @@ html body{
 }
 .nevbar{
     height: 70px;
+    width: 100%;
     background-color:rgba(7, 7, 32, 0.893);
     box-shadow: 0px 4px 5px rgba(7, 7, 32, 0.893);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: fixed;
 }
-.rightnev span{
+.nevbar span,p{
     cursor: pointer;
     }
     
 .leftnev img{
 width: 40px;
 height: 40px;
+object-fit: fill;
 }
 #nevimg{
     width: 42px;
@@ -109,19 +112,15 @@ font-weight: 600;
     height: 10px;
 }
 
-/* img fields */
-.food-field{
+.container{
     width: 100%;
-    margin-top: 40px;
+    height: 70lvh;
     display: flex;
-    justify-content: left;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
-img{
-    width: 370px;
-    height: 400px;
-    margin: 10px;
-    object-fit: cover; 
-    border-radius: 8px;
+.container h3{
+    font-family: sans-serif;
+    font-size: 40px;
+    color: rgb(108, 35, 35);
 }
-
